--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
         <li>Ability to work with people at all levels in the program </li>
     </ul>
         </section>
+        <section id="card-button">
+            <i class="bi bi-suit-heart"></i>
+            <i class="bi bi-chat-left-dots"></i>
+            <i class="bi bi-arrow-up-left-square-fill"></i>
+            <i class="bi bi-box-arrow-down"></i>
+        </section>
+    </section>
 </body>
 </html>
